public class Album {
    public String titulo;
    public TipoAlbum tipo;
    public List<Cancion> canciones;
}