public class Cancion {
    private String titulo;
    private Integer duracionSegundos;
}